--- a/app/views/advert/ilanguncelle.html.erb
+++ b/app/views/advert/ilanguncelle.html.erb
@@ -167,529 +167,32 @@
 							name="dropdown">
 								<option <%= 'selected' if @advert.advertable_type=='Secondhand'%> value="ikinciel">İkinci El İlan</option>
 								<option <%= 'selected' if @advert.advertable_type=='Homemate'%> value="evarkadasi">Ev Arkadaşı</option>
-								<option <%= 'selected' if @advert.advertable_type=='Lessonnote'%> value="dersnotlari">Ders Notları</option>
-								<option <%= 'selected' if @advert.advertable_type=='PrivateLesson'%> value="ozelders">Özel Ders</option>
+								<option <%= 'selected' if @advert.advertable_type=='Privatelesson'%> value="ozelders">Özel Ders</option>
 							</select>
 						</div>
 					</div>
 					
 					<% if @advert.advertable_type=='Secondhand' %>
-
-					<%= form_for @advert, :url => '/ilanguncelle/secondhand' , :method => :post , :html => {
-					:class => 'form-basic ikinciel' , :id => 'ikincielform',
-					:multipart => true,
-					:onsubmit => 'return ikincielsubmit();',
-					} do |t| %>
-
-					<%= t.fields_for @advert.advertable do |field| %>
 					
-					<%= t.hidden_field :id %>
-
-					<div class="row form-group">
-						<label class="control-label col-sm-2"> Alt Kategori</label>
-
-						<div class="col-sm-10">
-							<%= field.select :category, [['Beyaz Eşya', 'beyazesya'], ['Ev Dekorasyon',
-                  'evdekorasyon'], ['Müzik Aletleri', 'muzikaletleri'], ['Elektronik', 'elektronik'], ['Kırtasiye', 'kirtasiye'],
-                ['Mutfak Eşyaları', 'mutfakesyalari'], ['Vasıta', 'vasita'], ['Diğer', 'diger']],{}, {:class => " form-control"}  %>
-
-						</div>
-					</div>
-
-					<div class = "row form-group">
-						<label class = "col-sm-2 control-label">İlan Adı</label>
-
-						<div class = "col-sm-10">
-							<%= t.text_field :name, class:"form-control", :maxlength => 60, :onkeyup => 'ikincielilanadiVerify()' %>
-						</div>
-					</div>
-
-					<div style="display:none;" class = 'ikincielAlert ikincielNameAlert col-xs-12 label label-danger form-group'>
-						Lüften İlan Adı Giriniz
-					</div>
-
-					<div class = "row form-group">
-						<label class = "col-sm-2 control-label">Fiyat</label>
-
-						<div class = "col-sm-10">
-							<%= t.text_field :price, class:"form-control", :maxlength => 7, :onkeyup => 'ikincielfiyatVerify()' %>
-						</div>
-					</div>
-
-					<div style="display:none;"class = 'ikincielAlert ikincielPriceAlert col-xs-12 label label-danger form-group'>
-						Geçersiz Fiyat Değeri
-					</div>
-
-					<div class = "row form-group">
-						<label class = "col-sm-2 control-label">Ürün Rengi</label>
-
-						<div class = "col-sm-10">
-							<%= field.select :color, [['Siyah', 'siyah'], ['Beyaz', 'beyaz'], ['Kırmızı','kirmizi'],
-							['Mavi', 'mavi'], ['Sarı', 'sari'], ['Yeşil', 'yesil']],{}, {class: "form-control"}  %>
-						</div>
-					</div>
-
-					<div class = "row form-group">
-						<label class = "col-sm-2 control-label">Marka</label>
-
-						<div class = "col-sm-10">
-							<%= field.text_field :brand ,class:"form-control", :onkeyup => 'ikincielmarkaVerify()'%>
-						</div>
-					</div>
-
-					<div style="display:none;"class = 'ikincielAlert ikincielBrandAlert col-xs-12 label label-danger form-group'>
-						Lütfen Marka Giriniz
-					</div>
-
-					<div class = "row form-group">
-						<label class = "col-sm-2 control-label">Kullanım Durumu</label>
-
-						<div class = "col-sm-10">
-							<%= field.select :usage, [['Sıfır', 'true'], ['İkinci El', 'false']],{}, {class:"form-control"}  %>
-						</div>
-					</div>
-
-					<div class = "row form-group">
-						<label class = "col-sm-2 control-label">Garanti Durumu</label>
-
-						<div class = "col-sm-10">
-							<%= field.select :warranty, [['Var', 'true'], ['Yok', 'false']],{}, {class:"form-control"}  %>
-						</div>
-					</div>
-
-					<div class = "row form-group">
-						<label class = "col-sm-2 control-label">Açıklama</label>
-
-						<div class = "col-sm-10">
-							<%= t.text_area :explication, class:"form-control", :onkeyup => 'ikincielaciklamaVerify()'%>
-						</div>
-					</div>
-
-					<div style="display:none;"class = 'ikincielAlert ikincielExplicationAlert col-xs-12 label label-danger form-group'>
-						Lütfen Açıklama Giriniz
-					</div>
-
-					<br>
-
-					<div class="row">
-						<%= file_field_tag 'images[]', :type => :file, :multiple => true, :class => 'file_image' %>
-					</div>
+					<%= render "ikincielform", :local => { :advert => @advert,
+						 :advertable => @advert.advertable,
+						 :url => "/ilanguncelle/secondhand",
+						 :mode => 1 } %>
+		
+					<% elsif @advert.advertable_type=='Homemate' %>
 					
-					<% @images.each do |image|%>
-					
-					<div class="image-<%= image.id %>">
+						<%= render "evarkadasiform", :local => { :advert => @advert,
+						 :advertable => @advert.advertable,
+						 :url => "/ilanguncelle/homemate",
+						 :mode => 1 } %>
 
-					<%= image_tag image.imagefile(:small) %>
-
-
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					
-					
-
-					<a  style="cursor: pointer;" onclick="resimsil(<%= @advert.id %>,<%= image.id %>);" ><span style="font-size:20px;"class="glyphicon glyphicon-trash"></span></a>
-					<br>
-					<br>
-					
-					</div>
-
-					<% end %>
-
-					
-
-					<div class = "row form-group">
-						<div class = "col-sm-offset-2 col-sm-10">
-							<%= t.submit 'İlanı Güncelle',class:"btn btn-default" %>
-						</div>
-					</div>
-
-					<% end %>
-					<% end %>
-					
-
-					<script>
-						function ikincielilanadiVerify() {
-							var form = document.getElementById("ikincielform");
-							var advertname = form.elements['advert_name'].value;
-							var result = false;
-
-							if (!/\S/.test(advertname)) {
-								$('.ikincielNameAlert').show();
-							} else {
-								$('.ikincielNameAlert').hide();
-								result = true;
-							}
-							return result;
-
-						}
-
-						function ikincielfiyatVerify() {
-							var form = document.getElementById("ikincielform");
-							var price = form.elements['advert_price'].value;
-							var result = false;
-
-							var priceRegexp = new RegExp('^[0-9]*$');
-							var check = priceRegexp.test(price);
-
-							if (!check) {
-								$('.ikincielPriceAlert').show();
-							} else {
-								$('.ikincielPriceAlert').hide();
-								result = true;
-							}
-							return result;
-						}
-
-						function ikincielmarkaVerify() {
-							var form = document.getElementById("ikincielform");
-							var brand = form.elements['advert_secondhand_brand'].value;
-							var result = false;
-
-							if (!/\S/.test(brand)) {
-								$('.ikincielBrandAlert').show();
-							} else {
-								$('.ikincielBrandAlert').hide();
-								result = true;
-							}
-							return result;
-						}
-
-						function ikincielaciklamaVerify() {
-							var form = document.getElementById("ikincielform");
-							var explication = form.elements['advert_explication'].value;
-							var result = false;
-
-							if (!/\S/.test(explication)) {
-								$('.ikincielExplicationAlert').show();
-							} else {
-								$('.ikincielExplicationAlert').hide();
-								result = true;
-							}
-							return result;
-						}
-
-
-						function ikincielsubmit() {
-
-							var ilanadi = ikincielilanadiVerify();
-							var fiyat = ikincielfiyatVerify();
-							var marka = ikincielmarkaVerify();
-							var aciklama = ikincielaciklamaVerify();
-
-							return ilanadi && fiyat && marka && aciklama;
-
-						}
-					</script>
-					
-					<% end %>
-					<% if @advert.advertable_type=='Lessonnote' %>
-
-					<%= form_for @advert, :url => 'lecturenote' , :method => :post , :html => {
-					:class => 'form-basic ikinciel' , :id => 'dersnotuform',
-					:style => 'display:none;'
-					} do |t| %>
-
-					<%= t.fields_for :advertable do |field| %>
-					
-					<%= t.hidden_field :id %>
-
-					<div class = "row form-group">
-						<label class = "col-sm-2 control-label">İlan Adı</label>
-
-						<div class = "col-sm-10">
-							<%= t.text_field :name, class:"form-control" %>
-						</div>
-					</div>
-
-					<div class = "row form-group">
-						<label class = "col-sm-2 control-label">Fiyat</label>
-
-						<div class = "col-sm-10">
-							<%= t.text_field :price, class:"form-control" %>
-						</div>
-					</div>
-
-					<div class = "row form-group">
-						<label class = "col-sm-2 control-label">Açıklama</label>
-
-						<div class = "col-sm-10">
-							<%= t.text_field :explication, class:"form-control" %>
-						</div>
-					</div>
-
-					<div class="row">
-						<%= file_field_tag 'images[]', :type => :file, :multiple => true, :class => 'file_image'%>
-					</div>
-
-					<div class = "row form-group">
-						<div class = "col-sm-offset-2 col-sm-10">
-							<div class = "checkbox">
-								<label>
-									<input type = "checkbox">
-									Kullanım koşullarını kabul ediyorum</label>
-							</div>
-						</div>
-					</div>
-
-					<div class = "row form-group">
-						<div class = "col-sm-offset-2 col-sm-10">
-							<%= t.submit 'İlan Ver',class:"btn btn-default" %>
-						</div>
-					</div>
-					<% end %>
-					<% end %>
-					<% end %>
-
-					<% if @advert.advertable_type=='Homemate' %>
-					<%= form_for @advert, :url => '/ilanguncelle/homemate' , :method => :post , :html => {
-					:class => 'form-basic ikinciel' , :id => 'evarkadasiform',
-					:multipart => true,
-					:onsubmit => 'return evarkadasisubmit();'
-					} do |t| %>
-
-					<%= t.fields_for @advert.advertable do |field| %>
-					
-					<%= t.hidden_field :id %>
-
-					<div class = "row form-group">
-						<label class = "col-sm-2 control-label">İlan Adı</label>
-
-						<div class = "col-sm-10">
-							<%= t.text_field :name, class:"form-control", :onkeyup => 'evarkadasiilanadiVerify()' %>
-						</div>
-					</div>
-					
-					<div style="display:none;" class = 'evarkadasiAlert evarkadasiNameAlert col-xs-12 label label-danger form-group'>
-						Lüften İlan Adı Giriniz
-					</div>
-
-					<div class = "row form-group">
-						<label class = "col-sm-2 control-label">Aylık Kira</label>
-
-						<div class = "col-sm-10">
-							<%= t.text_field :price, class:"form-control", :onkeyup => 'evarkadasifiyatVerify()' %>
-						</div>
-					</div>
-					
-					<div style="display:none;" class = 'evarkadasiAlert evarkadasiPriceAlert col-xs-12 label label-danger form-group'>
-						Geçersiz Fiyat Değeri
-					</div>
-					
-					<div class = "row form-group">
-						<label class = "col-sm-2 control-label">Semt</label>
-
-						<div class = "col-sm-10">
-							<%= field.text_field :state, class:"form-control", :onkeyup => 'evarkadasisemtVerify()' %>
-						</div>
-					</div>
-					
-					<div style="display:none;" class = 'evarkadasiAlert evarkadasiStateAlert col-xs-12 label label-danger form-group'>
-						Geçersiz Semt Adı
-					</div>
-					
-					<div class = "row form-group">
-						<label class = "col-sm-2 control-label">Şehir</label>
-
-						<div class = "col-sm-10">
-							<%= field.text_field :city, class:"form-control", :onkeyup => 'evarkadasisehirVerify()' %>
-						</div>
-					</div>
-					
-					<div style="display:none;" class = 'evarkadasiAlert evarkadasiCityAlert col-xs-12 label label-danger form-group'>
-						Geçersiz Şehir Adı
-					</div>
-					
-					<div class = "row form-group">
-						<label class = "col-sm-2 control-label">Aranan</label>
-
-						<div class = "col-sm-10">
-							<%= field.select :demand, [['Erkek', 'male'], ['Kadın', 'female'], ['Hepsi', 'both']],{}, {class:"form-control"}  %>
-						</div>
-					</div>
-
-					<div class = "row form-group">
-						<label class = "col-sm-2 control-label">Açıklama</label>
-
-						<div class = "col-sm-10">
-							<%= t.text_area :explication, class:"form-control", :onkeyup => 'evarkadasiaciklamaVerify()' %>
-						</div>
-					</div>
-					
-					<div style="display:none;" class = 'evarkadasiAlert evarkadasiExplicationAlert col-xs-12 label label-danger form-group'>
-						Lüften Açıklama Giriniz
-					</div>
-					
-					<br/>
-
-					<div class="row">
-						<%= file_field_tag 'images[]', :type => :file, :multiple => true, :class => 'file_image'%>
-					</div>
-
-					<div class = "row form-group">
-						<div class = "col-sm-offset-2 col-sm-10">
-							<%= t.submit 'İlanı Güncelle',class:"btn btn-default" %>
-						</div>
-					</div>
-					<% end %>
-					<% end %>
-					
-					<script>
-					
+					<% elsif @advert.advertable_type=='Privatelesson' %>
 						
-						function evarkadasiilanadiVerify(){
-							var form = document.getElementById("evarkadasiform");
-							var advertname = form.elements['advert_name'].value;
-							var result = false;
-							
-							if(!/\S/.test(advertname)){
-								$('.evarkadasiNameAlert').show();
-							}
-							
-							else {
-								$('.evarkadasiNameAlert').hide();
-								result = true;
-							}
-							return result;
-							
-						}
+						<%= render "ozeldersform", :local => { :advert => @advert,
+						 :advertable => @advert.advertable,
+						 :url => "/ilanguncelle/privatelesson",
+						 :mode => 1 } %>
 						
-						function evarkadasifiyatVerify(){
-							var form = document.getElementById("evarkadasiform");
-							var price = form.elements['advert_price'].value;
-							var result = false;
-							
-							var priceRegexp = new RegExp('^[0-9]+$');
-							var check = priceRegexp.test(price);
-							
-							if(!check){
-								$('.evarkadasiPriceAlert').show();
-							}
-							
-							else {
-								$('.evarkadasiPriceAlert').hide();
-								result = true;
-							}
-							return result;
-						}
-						
-						function evarkadasisemtVerify(){
-							var form = document.getElementById("evarkadasiform");
-							var state = form.elements['advert_advertable_state'].value;
-							var result = false;
-							
-							if(!/^[a-zA-Z\u00c7\u00e7\u011e\u011f\u0130\u0131\u00d6\u00f6\u015e\u015f\u00dc\u00fc]{1,20}$/.test(state)){
-								$('.evarkadasiStateAlert').show();
-							}
-							
-							else {
-								$('.evarkadasiStateAlert').hide();
-								result = true;
-							}
-							return result;
-							
-						}
-						
-						function evarkadasisehirVerify(){
-							var form = document.getElementById("evarkadasiform");
-							var city = form.elements['advert_advertable_city'].value;
-							var result = false;
-							
-							if(!/^[a-zA-Z\u00c7\u00e7\u011e\u011f\u0130\u0131\u00d6\u00f6\u015e\u015f\u00dc\u00fc]{1,20}$/.test(city)){
-								$('.evarkadasiCityAlert').show();
-							}
-							
-							else {
-								$('.evarkadasiCityAlert').hide();
-								result = true;
-							}
-							return result;
-							
-						}
-						
-						function evarkadasiaciklamaVerify(){
-							var form = document.getElementById("evarkadasiform");
-							var explication = form.elements['advert_explication'].value;
-							var result = false;
-							
-							if(!/\S/.test(explication)){
-								$('.evarkadasiExplicationAlert').show();
-							}
-							
-							else {
-								$('.evarkadasiExplicationAlert').hide();
-								result = true;
-							}
-							return result;
-						}
-					
-						function evarkadasisubmit(){
-							
-							var ilanadi = evarkadasiilanadiVerify();
-							var fiyat = evarkadasifiyatVerify();
-							var semt = evarkadasisemtVerify();
-							var sehir = evarkadasisehirVerify();
-							var aciklama = evarkadasiaciklamaVerify();
-							
-							var kullanim = $("#evarkadasiform #kullanim").is(":checked");
-							
-							return ilanadi && fiyat && semt && sehir && aciklama && kullanim;
-							
-						}
-					</script>
-					<% end %>
-
-					<% if @advert.advertable_type=='Privatelesson' %>
-					<%= form_for @advert, :url => 'privatelesson' , :method => :post , :html => {
-					:class => 'form-basic ikinciel' , :id => 'ozeldersform',
-					:style => 'display:none;'
-					} do |t| %>
-
-					<%= t.fields_for :advertable do |field| %>
-
-					<div class = "row form-group">
-						<label class = "col-sm-2 control-label">İlan Adı</label>
-
-						<div class = "col-sm-10">
-							<%= t.text_field :name, class:"form-control" %>
-						</div>
-					</div>
-
-					<div class = "row form-group">
-						<label class = "col-sm-2 control-label">Fiyat</label>
-
-						<div class = "col-sm-10">
-							<%= t.text_field :price, class:"form-control" %>
-						</div>
-					</div>
-
-					<div class = "row form-group">
-						<label class = "col-sm-2 control-label">Açıklama</label>
-
-						<div class = "col-sm-10">
-							<%= t.text_field :explication, class:"form-control" %>
-						</div>
-					</div>
-
-					<div class="row">
-						<%= file_field_tag 'images[]', :type => :file, :multiple => true, :class => 'file_image'%>
-					</div>
-
-					<div class = "row form-group">
-						<div class = "col-sm-offset-2 col-sm-10">
-							<div class = "checkbox">
-								<label>
-									<input type = "checkbox">
-									Kullanım koşullarını kabul ediyorum</label>
-							</div>
-						</div>
-					</div>
-
-					<div class = "row form-group">
-						<div class = "col-sm-offset-2 col-sm-10">
-							<%= t.submit 'İlan Ver',class:"btn btn-default" %>
-						</div>
-					</div>
-					<% end %>
-					<% end %>
 					<% end %>
 
 				</div>
