--- a/app/views/application/_kullanicipaneli.html.erb
+++ b/app/views/application/_kullanicipaneli.html.erb
@@ -43,11 +43,7 @@
 				<li>
 					<a href='/kategoriler/evarkadasi'><span>Ev Arkadaşı</span></a>
 				</li>
-				<li class='last'>
-					<a href='/kategoriler/dersnotu'><span>Ders
-						Notları</span></a>
-				</li>
-				<li class='last'>
+				<li>
 					<a href='/kategoriler/ozelders'><span>Özel Ders</span></a>
 				</li>
 				
@@ -81,8 +77,7 @@
 						Güvenilir Satıcılar</span></a>
 				</li>
 				<li class='last'>
-					<a href='/firsatlar?kendiuniversitemdekiler=1'><span>En Yakında
-						Olan Satıcılar</span></a>
+					<a href='/firsatlar?kendiuniversitemdekiler=1'><span>Üniversitemdekiler</span></a>
 				</li>
 			</ul>
 		</li>
