--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1623,6 +1623,12 @@
 			<%= render "headerfixedjs" %>
 
 			<!-- Dropdown login box -->
+			
+			<% if params[:yeniilan] %>
+				<script>
+					alert("İlanınız Başarıyla Alındı");
+				</script>
+			<% end %>
 
 	</body>
 
