--- a/app/views/user_mailer/verify.html.erb
+++ b/app/views/user_mailer/verify.html.erb
@@ -16,7 +16,7 @@
 	
 	<p>	Campus İlan'a hoşgeldiniz.Umarız Campus İlan'da keyifli vakit geçirir ve aradığınızı bulabilirsiniz. </p> 
 
-	<p> Kayıt olmak için kullandığınız eposta adresi: <%= @user.mail %> Lütfen kaydınızı onaylamak için aşağıdaki butona tıklayınız.</p> 
+	<p> Kayıt olmak için kullandığınız eposta adresi: <%= @user.email %> Lütfen kaydınızı onaylamak için aşağıdaki butona tıklayınız.</p> 
 	
 	<p> Lütfen kaydınızı onaylamak için aşağıdaki butona tıklayınız.</p> 
 
