--- a/app/views/application/_kullanicipaneli.html.erb
+++ b/app/views/application/_kullanicipaneli.html.erb
@@ -177,7 +177,7 @@
 		
 		$("<%= @sekme %>").show(); 
 		
-		<% if @sekme==".tekliflerim" || @sekme==".hesapayarlari" %>
+		<% if  @sekme==".hesapayarlari" %>
 		
 		$(".degiskenpanel").show();
 		
