--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -830,7 +830,7 @@
 
 					<% end %>
 
-					<div style="margin-top:40px;" class="row">
+					<div style="margin-top:40px;" class="">
 
 						<div  class="panel panel-danger">
 
@@ -1552,8 +1552,12 @@
 					</div>
 
 				</div>
+				
+				</div>
 
 				<%= render "footer" %>
+				
+				
 
 			</div>
 
