--- a/app/views/index/mesajlarim.html.erb
+++ b/app/views/index/mesajlarim.html.erb
@@ -1356,7 +1356,7 @@ $(".<%= mesaj.id %>
 				
 				$modaljquery("#mesajgonder").on('show.bs.modal', function() {
 					
-					$("body").css({"margin-right":"0px"});
+					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
 					
 
 				});
@@ -1364,50 +1364,50 @@ $(".<%= mesaj.id %>
 			
 				$modaljquery("#mesajgonder").on('hidden.bs.modal', function() {
 					
-					$("body").css({"overflow":"scroll","height":"100%"});
-					$(html).css({"overflow":"auto","height":"100%"});
+					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
+					
 					
 
 				});
 				
 				$modaljquery("#mesajgonder2").on('show.bs.modal', function() {
-					$("body").css({"width":"100%","margin-right":"0px"});
+					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
 				});
 
 				$modaljquery("#mesajgonder2").on('hidden.bs.modal', function() {
-					$("body").css({"width":"100%","margin-right":"0px"});
+					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
 				});
 				
 				$modaljquery("#mesajcevapla").on('show.bs.modal', function() {
-					$("body").css({"width":"100%","margin-right":"0px"});
+					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
 				});
 				
 				$modaljquery("#mesajcevapla").on('hidden.bs.modal', function() {
-					$("body").css({"width":"100%","margin-right":"0px"});
+					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
 				});
 				
 				$modaljquery("#mesajcevapla2").on('show.bs.modal', function() {
-					$("body").css({"width":"100%","margin-right":"0px"});
+					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
 				});
 
 				$modaljquery("#mesajcevapla2").on('hidden.bs.modal', function() {
-					$("body").css({"width":"100%","margin-right":"0px"});
+					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
 				});
 				
 				$modaljquery("#mesajsil").on('show.bs.modal', function() {
-					$("body").css({"width":"100%","margin-right":"0px"});
+					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
 				});
 
 				$modaljquery("#mesajsil").on('hidden.bs.modal', function() {
-					$("body").css({"width":"100%","margin-right":"0px"});
+					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
 				});
 				
 				$modaljquery("#mesajsil2").on('show.bs.modal', function() {
-					$("body").css({"width":"100%","margin-right":"0px"});
+					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
 				});
 
 				$modaljquery("#mesajsil2").on('hidden.bs.modal', function() {
-					$("body").css({"width":"100%","margin-right":"0px"});
+					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
 				});
 
 			</script>
