--- a/app/views/application/_ilanbunlaradabakti.html.erb
+++ b/app/views/application/_ilanbunlaradabakti.html.erb
@@ -1,5 +1,5 @@
 <div class="product-bottom">
-	<h3 class="cate">Bu ürüne bakanlar bunlara da baktı</h3>
+	<h3 class="cate">Bu ilana bakanlar bunlara da baktı</h3>
 
 	<% @looked.each do |advert|%>
 	<div class="product-go">
