--- a/app/views/index/mesajlarim.html.erb
+++ b/app/views/index/mesajlarim.html.erb
@@ -263,25 +263,16 @@
 												</p></td>
 
 												<script>
-$(".<%= mesaj.id %>
-													").click(function() {
+$(".<%= mesaj.id %>").click(function() {
 
-													$(".cevaplapaneli .ickisim").attr("placeholder", "
-<%= mesaj.from.username %>
-	");
+						$(".cevaplapaneli .ickisim").attr("placeholder", "<%= mesaj.from.username %>");
 
-	$(".cevaplapaneli .ickisim").val("
-<%= mesaj.from.username %>
-	");
+	$(".cevaplapaneli .ickisim").val("<%= mesaj.from.username %>");
 	});
 
-	$(".
-<%= mesaj.id %>
-	").click(function() {
+	$(".<%= mesaj.id %>").click(function() {
 
-	$(".silpaneli .mesajfromid").val("
-<%= mesaj.id %>
-	");
+	$(".silpaneli .mesajfromid").val("<%= mesaj.id %>");
 
 	});
 
@@ -327,26 +318,17 @@ $(".<%= mesaj.id %>
 												</p></td>
 
 												<script>
-$(".<%= mesaj.id %>
-													").click(function() {
+$(".<%= mesaj.id %>").click(function() {
 
-													$(".cevaplapaneli .ickisim").attr("placeholder", "
-<%= mesaj.to.username %>
-	");
+$(".cevaplapaneli .ickisim").attr("placeholder", "<%= mesaj.to.username %>");
 
-	$(".cevaplapaneli .ickisim").val("
-<%= mesaj.to.username %>
-	");
+	$(".cevaplapaneli .ickisim").val("<%= mesaj.to.username %>");
 
 	});
 
-	$(".
-<%= mesaj.id %>
-	").click(function() {
+	$(".<%= mesaj.id %>").click(function() {
 
-	$(".silpaneli .mesajtoid").val("
-<%= mesaj.id %>
-	");
+	$(".silpaneli .mesajtoid").val("<%= mesaj.id %>");
 
 	});
 
@@ -644,25 +626,16 @@ $(".<%= mesaj.id %>
 											</p></td>
 
 											<script>
-$(".<%= mesaj.id %>
-												").click(function() {
+$(".<%= mesaj.id %>").click(function() {
 
-												$(".cevaplapaneli .ickisim").attr("placeholder", "
-<%= mesaj.from.username %>
-	");
+												$(".cevaplapaneli .ickisim").attr("placeholder", "<%= mesaj.from.username %>");
 
-	$(".cevaplapaneli .ickisim").val("
-<%= mesaj.from.username %>
-	");
+	$(".cevaplapaneli .ickisim").val("<%= mesaj.from.username %>");
 	});
 
-	$(".
-<%= mesaj.id %>
-	").click(function() {
+	$(".<%= mesaj.id %>").click(function() {
 
-	$(".silpaneli .mesajfromid").val("
-<%= mesaj.id %>
-	");
+	$(".silpaneli .mesajfromid").val("<%= mesaj.id %>");
 
 	});
 
@@ -708,26 +681,17 @@ $(".<%= mesaj.id %>
 											</p></td>
 
 											<script>
-$(".<%= mesaj.id %>
-												").click(function() {
+$(".<%= mesaj.id %>").click(function() {
 
-												$(".cevaplapaneli .ickisim").attr("placeholder", "
-<%= mesaj.to.username %>
-	");
+												$(".cevaplapaneli .ickisim").attr("placeholder", "<%= mesaj.to.username %>");
 
-	$(".cevaplapaneli .ickisim").val("
-<%= mesaj.to.username %>
-	");
+	$(".cevaplapaneli .ickisim").val("<%= mesaj.to.username %>");
 
 	});
 
-	$(".
-<%= mesaj.id %>
-	").click(function() {
+	$(".<%= mesaj.id %>").click(function() {
 
-	$(".silpaneli .mesajtoid").val("
-<%= mesaj.id %>
-	");
+	$(".silpaneli .mesajtoid").val("<%= mesaj.id %>");
 
 	});
 
